--- a/assets/sass/layouts/_navigation.scss
+++ b/assets/sass/layouts/_navigation.scss
@@ -999,25 +999,20 @@ Main components
     }
 
     input {
-        margin: 0px auto;
+        margin: 0;
         border-radius: 0;
         border: none;
         background: $color-4;
         height: 100%;
+        width: calc(100% - 36px);
         box-shadow: inset 0 1px 0 $color-3, 0 3px 6px rgba(#000, .05);
         font-family: $opensans-condensed;
         @include appearance(none);
 
-
-        @include MQ(M) {
-            width: 100%;
-            padding-left: 20px;
+        @include MQ(L) {
+          width: 80%;
+          padding: 0;
         }
-
-      @include MQ(L) {
-        width: 820px;
-        padding: 0;
-      }
 
         @include placeholder {
             color: darken($color-3, 10%);
